--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -63,7 +63,7 @@
     "from sklearn.svm import SVC\n",
     "from scipy.optimize import fmin_slsqp\n",
     "import sys\n",
-    "sys.path.insert(0, \"/Users/xu/Desktop/5243 project4\")\n",
+    "sys.path.insert(0, '../lib/')\n",
     "import utils as ut\n",
     "import loss_funcs as lf\n",
     "import csvm as csvm"
