--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -249,14 +249,14 @@
        "9               5       Medium             1        0.958333  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Importing the raw dataset\n",
-    "raw_data = pd.read_csv(\"/Users/xu/Desktop/5243 project4/compas-scores-two-years.csv\")\n",
+    "raw_data = pd.read_csv(\"../data/compas-scores-two-years.csv\")\n",
     "# raw_data.head()\n",
     "\n",
     "# Create New Variable length_of_stay\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "4           0     -0.542508       -0.358905  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "3     SVM  Test     65.847953        2.654994  0.634721"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,12 +796,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train model, use from utils\n",
-    "np.random.seed(100)\n",
+    "np.random.seed(110)\n",
     "w = ut.train_model(X_train,\n",
     "                   Y_train,\n",
     "                   x_control = {'race': race_train},\n",
@@ -823,25 +823,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the validation set: 0.48771929824561405\n",
+      "Accuracy on the validation set: 0.4888888888888889\n",
       "Test accuracy: 0.4982\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -865,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -935,17 +925,17 @@
        "      <th>0</th>\n",
        "      <td>C-SVM</td>\n",
        "      <td>Val</td>\n",
-       "      <td>47.017544</td>\n",
-       "      <td>8.93973</td>\n",
-       "      <td>0.941057</td>\n",
+       "      <td>47.485380</td>\n",
+       "      <td>10.710206</td>\n",
+       "      <td>0.970465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>C-SVM</td>\n",
        "      <td>Test</td>\n",
-       "      <td>47.485380</td>\n",
-       "      <td>5.43628</td>\n",
-       "      <td>0.938462</td>\n",
+       "      <td>48.421053</td>\n",
+       "      <td>7.956372</td>\n",
+       "      <td>0.997649</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -953,11 +943,11 @@
       ],
       "text/plain": [
        "  Classifier   Set  Accuracy (%)  Calibration (%)    p_rule\n",
-       "0      C-SVM   Val     47.017544          8.93973  0.941057\n",
-       "1      C-SVM  Test     47.485380          5.43628  0.938462"
+       "0      C-SVM   Val     47.485380        10.710206  0.970465\n",
+       "1      C-SVM  Test     48.421053         7.956372  0.997649"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,23 +973,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1033,9 +1009,9 @@
        "      <th>0</th>\n",
        "      <td>CLR</td>\n",
        "      <td>Val</td>\n",
-       "      <td>48.771930</td>\n",
-       "      <td>11.988510</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>48.888889</td>\n",
+       "      <td>11.713028</td>\n",
+       "      <td>0.997245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1049,17 +1025,17 @@
        "      <th>2</th>\n",
        "      <td>CSVM</td>\n",
        "      <td>Val</td>\n",
-       "      <td>47.017544</td>\n",
-       "      <td>8.939730</td>\n",
-       "      <td>0.941057</td>\n",
+       "      <td>47.485380</td>\n",
+       "      <td>10.710206</td>\n",
+       "      <td>0.970465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>CSVM</td>\n",
        "      <td>Test</td>\n",
-       "      <td>47.485380</td>\n",
-       "      <td>5.436280</td>\n",
-       "      <td>0.938462</td>\n",
+       "      <td>48.421053</td>\n",
+       "      <td>7.956372</td>\n",
+       "      <td>0.997649</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1067,13 +1043,13 @@
       ],
       "text/plain": [
        "  Methods   Set  Accuracy (%)  Calibration(%)    p_rule\n",
-       "0     CLR   Val     48.771930       11.988510  1.000000\n",
+       "0     CLR   Val     48.888889       11.713028  0.997245\n",
        "1     CLR  Test     49.824561        8.791619  0.998936\n",
-       "2    CSVM   Val     47.017544        8.939730  0.941057\n",
-       "3    CSVM  Test     47.485380        5.436280  0.938462"
+       "2    CSVM   Val     47.485380       10.710206  0.970465\n",
+       "3    CSVM  Test     48.421053        7.956372  0.997649"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1377,7 @@
        "3  0.571877  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,19 +1407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/Users/xu/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:402: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1496,9 +1462,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>CSVM</td>\n",
-       "      <td>47.485380</td>\n",
-       "      <td>5.436280</td>\n",
-       "      <td>0.938462</td>\n",
+       "      <td>48.421053</td>\n",
+       "      <td>7.956372</td>\n",
+       "      <td>0.997649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1523,12 +1489,12 @@
        "0                       Baseline LR     65.730994        0.393226  0.544211\n",
        "1                      Baseline SVM     65.847953        2.654994  0.634721\n",
        "2                               CLR     49.824561        8.791619  0.998936\n",
-       "3                              CSVM     47.485380        5.436280  0.938462\n",
+       "3                              CSVM     48.421053        7.956372  0.997649\n",
        "4              Local Massaging (LR)     64.561404        1.334673  0.337680\n",
        "5  Local Preferential Sampling (LR)     65.614035        0.094719  0.571877"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
