--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, we aim to evaluate a methods for improving fairness of models using different metrics of fairness. We observe 4 methods, all of which are found in the two papers listed above. We also evaluate baseline Logistic Regression and Support Vector Machine models on their fairness to compare with these methods. We use the COMPAS dataset as our means of evaluation. It contains criminal history, jail and prison time, demographics, and risk scores within a certain county. Specifically, we will observe how these methods upon models classify those of different race."
+    "The project is focused on fair classification, particularly on the issue of bias in predicting the likelihood of recidivism in criminal defendants (data found in the COMPAS dataset). Our goal is to evaluate methods for improving fairness of models using different metrics of fairness. We observe 4 methods, all of which are found in the two papers listed above. The code uses data cleaning techniques, feature selection, and normalization to prepare the data for model training. The dataset is split into training, validation, and testing sets, and a logistic regression model is trained to predict recidivism. Through this process, we individually apply the methods and aim to evaluate them. This is done by finding the calibration difference between the predicted outcomes for Caucasians and African Americans to assess fairness in addition to their p-rule's. The code and dataset are available on GitHub, and the project is part of ongoing research in fair classification."
    ]
   },
   {
